# portrettengalerij

./: .gitignore  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  manage.py  nginx.conf.template  pyproject.toml
galerij_project/: asgi.py  manage.py  settings.py  urls.py  wsgi.py
galerij_project/galerij_project/: asgi.py  settings.py  urls.py  wsgi.py
galerij_project/portretten/: admin.py  apps.py  models.py  urls.py
galerij_project/portretten/migrations/: 0001_initial.py
galerij_project/portretten/templates/portretten/: index.html  object_list.html  objects.html  tooltip.html
portretten/: models.py  views.py
portretten/static/css/: base.css  bootstrap_ru.css
portretten/static/js/: htmx.js
portretten/templates/portretten/: base.html  modal_description.html  objects.html
portretten/templatetags/: custom_tags.py
